tests/rascal/negative/parse_errors/L1/no-semi.ob
MODULE Bla

BEGIN
END Bla.